# pep517-sample

./: README.md  meow.py  meowmodule.py  pyproject.toml  setup.cfg
meowpkg/: __init__.py
src/meow/: __init__.py
